<resources>
    <string name="app_name">MyBank</string>
    <string name="my_bank">بانک من</string>
    <string name="username">نام کاربری</string>
    <string name="password">کلمه ی عبور</string>
    <string name="login">ورود به حساب کاربری</string>
    <string name="dont_have_account_register_now">حساب ندارید؟ از اینجا عضو شوید.</string>
    <string name="have_account_login">حساب کاربری دارید؟ از اینجا وارد شوید.</string>
    <string name="name_and_family">نام و نام خانوادگی</string>
    <string name="repeat_password">تکرار کلمه عبور</string>
    <string name="create_new_account">ایجاد حساب کاربری</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">خانه</string>
    <string name="accounts">حساب ها</string>
    <string name="account_detail">جزئیات حساب</string>
    <string name="requests">درخواست ها</string>
    <string name="no_new_message">شما درخواست جدیدی ندارید.</string>
    <string name="add">Add</string>
    <string name="add_new_account">افزودن حساب</string>
    <string name="choose_account_type">انتخاب نوع حساب:</string>
    <string name="choose_confidentiality_type">انتخاب نوع محرمانگی:</string>
    <string name="choose_integrity_type">انتخاب نوع صحت:</string>
    <string name="balance_init">موجودی اولیه حساب</string>


    <string name="get_money">برداشت وجه</string>
    <string name="transfer_money">واریز وجه</string>
    <string name="join_account">اشتراک حساب</string>

    <string name="account_number">شماره حساب</string>
    <string name="account_open_date">تاریخ افتتاح حساب</string>
    <string name="account_owner">صاحبان حساب</string>
    <string name="account_balance">موجودی حساب</string>
    <string name="account_type">نوع حساب</string>
    <string name="applicant">درخواست دهنده:</string>
    <string name="join_in_account">مشترک شدن در حساب:</string>
    <string name="accept_join">قبول درخواست </string>
    <string name="reject_join">رد درخواست </string>
    <string name="from_account">از حساب</string>
    <string name="to_account">به حساب</string>
    <string name="amount">مبلغ</string>
    <string name="recent_income">واریز های اخیر</string>
    <string name="recent_outcome">برداشت های اخیر</string>
</resources>