<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        tools:context=".main.MainFragment">

        <LinearLayout
            android:id="@+id/top_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/gray_rounded_rectangle"
            android:elevation="8dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/my_bank"
                android:textAppearance="@style/vazirFont"
                android:textColor="@color/purple_700"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@mipmap/login_top_banner"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/get_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/gray_rounded_rectangle"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_banner">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_attach_money_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_money"
                android:textAppearance="@style/vazirFont" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/deposit_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/gray_rounded_rectangle"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/get_money"
            app:layout_constraintLeft_toRightOf="@+id/get_money"
            app:layout_constraintRight_toLeftOf="@+id/join_account"
            app:layout_constraintTop_toTopOf="@+id/get_money">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_money_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transfer_money"
                android:textAppearance="@style/vazirFont" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/join_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/gray_rounded_rectangle"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/deposit_money"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/deposit_money">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_join_account"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_account"
                android:textAppearance="@style/vazirFont" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@string/add"
            android:src="@drawable/ic_baseline_add_24"
            app:backgroundTint="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>