<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        tools:context=".accounts.AccountsFragment">

        <RelativeLayout
            android:id="@+id/top_toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/purple_500">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/account_detail"
                android:textAppearance="@style/vazirFont"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:padding="3dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:elevation="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account_number"
                        android:textAppearance="@style/vazirFont"
                        android:textColor="@color/teal_700" />

                    <TextView
                        android:id="@+id/account_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:textAppearance="@style/vazirFont"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>

                <LinearLayout
                    android:elevation="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account_balance"
                        android:textAppearance="@style/vazirFont"
                        android:textColor="@color/teal_700" />

                    <TextView
                        android:id="@+id/account_balance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:textAppearance="@style/vazirFont"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>

                <LinearLayout
                    android:elevation="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account_type"
                        android:textAppearance="@style/vazirFont"
                        android:textColor="@color/teal_700" />

                    <TextView
                        android:id="@+id/account_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:textAppearance="@style/vazirFont"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>

                <LinearLayout
                    android:elevation="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account_open_date"
                        android:textAppearance="@style/vazirFont"
                        android:textColor="@color/teal_700" />

                    <TextView
                        android:id="@+id/account_open_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:textAppearance="@style/vazirFont"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>

                <LinearLayout
                    android:elevation="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account_owner"
                        android:textAppearance="@style/vazirFont"
                        android:textColor="@color/teal_700" />

                    <TextView
                        android:id="@+id/account_owners"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:textAppearance="@style/vazirFont"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:text="@string/recent_income"
                            android:textAppearance="@style/vazirFont"
                            android:textColor="@color/dark_green" />


                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:text="@string/recent_outcome"
                            android:textAppearance="@style/vazirFont"
                            android:textColor="@color/dark_red" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1.5dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/gray" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/last_income"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:textAppearance="@style/vazirFont" />


                        <TextView
                            android:id="@+id/last_outcome"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:textAppearance="@style/vazirFont" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </ScrollView>


    </LinearLayout>
</layout>