<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        tools:context=".main.addAccount.AddAccount">

        <RelativeLayout
            android:id="@+id/top_toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/purple_500"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add_new_account"
                android:textAppearance="@style/vazirFont"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:padding="3dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/account_type_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/purple_rounded_rectangle_10dp"
                android:backgroundTint="@color/light_gray"
                android:orientation="vertical"
                android:padding="5dp"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/choose_account_type"
                    android:textAppearance="@style/vazirFont"
                    android:textColor="@color/purple_700" />

                <Spinner
                    android:id="@+id/account_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/confidentiality_type_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/purple_rounded_rectangle_10dp"
                android:backgroundTint="@color/light_gray"
                android:orientation="vertical"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@+id/account_type_holder">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/choose_confidentiality_type"
                    android:textAppearance="@style/vazirFont"
                    android:textColor="@color/purple_700" />

                <Spinner
                    android:id="@+id/confidentiality_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/integrity_type_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/purple_rounded_rectangle_10dp"
                android:backgroundTint="@color/light_gray"
                android:orientation="vertical"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@+id/confidentiality_type_holder">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/choose_integrity_type"
                    android:textAppearance="@style/vazirFont"
                    android:textColor="@color/purple_700" />

                <Spinner
                    android:id="@+id/integrity_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <EditText
                android:id="@+id/balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/purple_rounded_rectangle_10dp"
                android:backgroundTint="@color/light_gray"
                android:hint="@string/balance_init"
                android:inputType="number"
                android:maxLength="8"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/integrity_type_holder"
                tools:ignore="Autofill" />

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/add_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/purple_rounded_rectangle_10dp"
                android:backgroundTint="@color/purple_500"
                android:padding="15dp"
                android:text="@string/add_new_account"
                android:textAppearance="@style/vazirFont"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/balance"
                app:spinning_bar_color="@color/white"
                app:spinning_bar_padding="5dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</layout>