<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        tools:context=".main.addAccount.AddAccount">

        <RelativeLayout
            android:id="@+id/top_toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/purple_500"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/transfer_money"
                android:textAppearance="@style/vazirFont"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:padding="3dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="20dp">


            <EditText
                android:layout_marginTop="20dp"
                android:id="@+id/toAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/purple_rounded_rectangle_10dp"
                android:backgroundTint="@color/light_gray"
                android:hint="@string/to_account"
                android:inputType="number"
                android:padding="15dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/purple_rounded_rectangle_10dp"
                android:backgroundTint="@color/light_gray"
                android:hint="@string/amount"
                android:inputType="number"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/toAccount"
                tools:ignore="Autofill" />

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/add_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/purple_rounded_rectangle_10dp"
                android:backgroundTint="@color/purple_500"
                android:padding="15dp"
                android:text="@string/transfer_money"
                android:textAppearance="@style/vazirFont"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/amount"
                app:spinning_bar_color="@color/white"
                app:spinning_bar_padding="5dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</layout>